--- a/portfolio/templates/post/index.html
+++ b/portfolio/templates/post/index.html
@@ -1,5 +1,10 @@
 {% extends "post/base.html" %}
 
+{% block title %}
+<title>Aryaman Arya Photography</title>
+  
+{% endblock title %}
+
 {% block content %}
 
 <body>
