--- a/portfolio/templates/post/base.html
+++ b/portfolio/templates/post/base.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/js/bootstrap.js' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/lightbox.min.css' %}">
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
@@ -44,6 +45,7 @@
     {% endblock %}
 
     <!--   Core JS Files   -->
+    <script src="{% static 'assets/js/lightbox-plus-jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'assets/js/core/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'assets/js/core/bootstrap-material-design.min.js' %}" type="text/javascript"></script>
