--- a/portfolio/templates/contact/contact.html
+++ b/portfolio/templates/contact/contact.html
@@ -6,9 +6,8 @@
 {% endblock title %}
 
 {% block content %}
-
 <div class="cd-section" id="contactus">
-  <div class="contactus-1 section-image" style="background-image: url('../static/assets/images/contact_img.jpg')">
+  <div class="contactus-1 section-image" style="background-image: url('../static/assets/images/contact_img.jpg')"><br><br><br>
     <div class="container">
       <div class="row">
         <div class="col-md-5">
