--- a/portfolio/templates/post/base.html
+++ b/portfolio/templates/post/base.html
@@ -23,8 +23,8 @@
     
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body style="background-color:darkslategray">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,120 @@
                 <a class="nav-item nav-link active" href="{% url 'blog:blog' %}">Blogs</a>
             </div>
         </div>
-    </nav>
+    </nav> -->
+    <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
+            <div class="container">
+              <div class="navbar-translate">
+                <a class="navbar-brand" href="{% url 'post:index' %}">
+                 Aryaman Arya Photography </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+              <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a href="{% url 'gallery:gallery' %}" class="nav-link" data-toggle="">
+                      <i class="material-icons">photo_camera</i> Gallery
+                    </a>
+                    <!-- <div class="dropdown-menu dropdown-with-icons">
+                      <a href="./presentation.html" class="dropdown-item">
+                        <i class="material-icons">line_style</i> Presentation
+                      </a>
+                      <a href="./index.html" class="dropdown-item">
+                        <i class="material-icons">layers</i> All Components
+                      </a>
+                      <a href="http://demos.creative-tim.com/material-kit-pro/docs/2.1/getting-started/introduction.html" class="dropdown-item">
+                        <i class="material-icons">content_paste</i> Documentation
+                      </a>
+                    </div> -->
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'blog:blog' %}" class="nav-link" data-toggle="">
+                      <i class="material-icons">view_day</i> Blog
+                    </a>
+                    <!-- <div class="dropdown-menu dropdown-with-icons">
+                      <a href="./sections.html#headers" class="dropdown-item">
+                        <i class="material-icons">dns</i> Headers
+                      </a>
+                      <a href="./sections.html#features" class="dropdown-item">
+                        <i class="material-icons">build</i> Features
+                      </a>
+                      <a href="./sections.html#blogs" class="dropdown-item">
+                        <i class="material-icons">list</i> Blogs
+                      </a>
+                      <a href="./sections.html#teams" class="dropdown-item">
+                        <i class="material-icons">people</i> Teams
+                      </a>
+                      <a href="./sections.html#projects" class="dropdown-item">
+                        <i class="material-icons">assignment</i> Projects
+                      </a>
+                      <a href="./sections.html#pricing" class="dropdown-item">
+                        <i class="material-icons">monetization_on</i> Pricing
+                      </a>
+                      <a href="./sections.html#testimonials" class="dropdown-item">
+                        <i class="material-icons">chat</i> Testimonials
+                      </a>
+                      <a href="./sections.html#contactus" class="dropdown-item">
+                        <i class="material-icons">call</i> Contacts
+                      </a>
+                    </div>-->
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'contact:contact' %}" class="nav-link" data-toggle="">
+                      <i class="material-icons">phone_iphone</i> Contact
+                    </a>
+                    <!-- <div class="dropdown-menu dropdown-with-icons">
+                      <a href="./examples/about-us.html" class="dropdown-item">
+                        <i class="material-icons">account_balance</i> About Us
+                      </a>
+                      <a href="./examples/blog-post.html" class="dropdown-item">
+                        <i class="material-icons">art_track</i> Blog Post
+                      </a>
+                      <a href="./examples/blog-posts.html" class="dropdown-item">
+                        <i class="material-icons">view_quilt</i> Blog Posts
+                      </a>
+                      <a href="./examples/contact-us.html" class="dropdown-item">
+                        <i class="material-icons">location_on</i> Contact Us
+                      </a>
+                      <a href="./examples/landing-page.html" class="dropdown-item">
+                        <i class="material-icons">view_day</i> Landing Page
+                      </a>
+                      <a href="./examples/login-page.html" class="dropdown-item">
+                        <i class="material-icons">fingerprint</i> Login Page
+                      </a>
+                      <a href="./examples/pricing.html" class="dropdown-item">
+                        <i class="material-icons">attach_money</i> Pricing Page
+                      </a>
+                      <a href="./examples/shopping-cart.html" class="dropdown-item">
+                        <i class="material-icons">shopping_basket</i> Shopping Cart
+                      </a>
+                      <a href="./examples/ecommerce.html" class="dropdown-item">
+                        <i class="material-icons">store</i> Ecommerce Page
+                      </a>
+                      <a href="./examples/product-page.html" class="dropdown-item">
+                        <i class="material-icons">shopping_cart</i> Product Page
+                      </a>
+                      <a href="./examples/profile-page.html" class="dropdown-item">
+                        <i class="material-icons">account_circle</i> Profile Page
+                      </a>
+                      <a href="./examples/signup-page.html" class="dropdown-item">
+                        <i class="material-icons">person_add</i> Signup Page
+                      </a>
+                    </div> -->
+                  </li>
+                  <!-- <li class="button-container nav-item iframe-extern">
+                    <a href="https://www.creative-tim.com/product/material-kit-pro?ref=presentation" target="_blank" class="btn  btn-rose   btn-round btn-block">
+                      <i class="material-icons">shopping_cart</i> Buy Now
+                    </a>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
 
     {% block content %}
 
