--- a/portfolio/templates/gallery/gallery.html
+++ b/portfolio/templates/gallery/gallery.html
@@ -1,5 +1,9 @@
 {% extends "post/base.html" %}
 
+{% block title %}
+<title>Gallery</title>    
+{% endblock title %}
+    
 {% block content %}
 
 <div class="projects-2" id="projects-2">
@@ -7,7 +11,7 @@
         <div class="row">
             
             {% for image in gallery %}
-            <div class="col-md-4">
+            <div class="col-md-3">
                     <div class="card card-plain">
                         <a href="{{image.image.url}}" data-lightbox="mygallery" data-title="{{image.image_des}}">
                             <div class="card-header card-header-image">
