--- a/portfolio/templates/blog/blog_detail.html
+++ b/portfolio/templates/blog/blog_detail.html
@@ -1,11 +1,38 @@
-{% extends "base.html" %}
+{% extends "post/base.html" %}
 
 {% block title %}
-Blog
+<title>Blog</title>
 {% endblock title %}
+
+
 
 {% block content %}
 
-<h1>blog detail</h1>
-  
+<div class="page-header header-filter" data-parallax="true" style="background-image: url('{{post.image.url}}');">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 ml-auto mr-auto text-center">
+                <h1 class="title">{{post.title}}</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="main main-raised">
+    <div class="container">
+        <div class="section section-header">
+            <div class="row">
+                <div class="col-md-8 ml-auto mr-auto">
+                    <h3 class="title">{{post.title}}</h3>
+                    <p style="font-size:20px;">{{post.body}}</p>
+                    <br> <br>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
+
+
 {% endblock content %}
