--- a/portfolio/templates/blog/blog_list.html
+++ b/portfolio/templates/blog/blog_list.html
@@ -1,48 +1,46 @@
 {% extends "post/base.html" %}
 
+{% block title %}
+
+<title>Blogs</title>
+  
+{% endblock title %}
+
 {% block content %}
 
 
-<!-- {% for object in object_list %}
-    <h3>{{ object.title }}</h3>
-    <h4>{{ object.body }}</h4>
-    <h5>{{ object.image }}</h5>
-    <img src="{{ object.image.url }}" alt="" style="height: 100px"; width="100px">
-{% endfor %} -->
-
 <div class="cd-section" id="blogs">
-    <!--     *********     BLOGS 1      *********      -->
-    <div class="blogs-1" id="blogs-1">
-        <div class="container">
+  <!--     *********     BLOGS 1      *********      -->
+  <!-- <div class="blogs-1" id="blogs-1">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 ml-auto mr-auto">
+          <br>
+
+          {% for object in object_list %}
+          <div class="card card-plain card-blog">
             <div class="row">
-                <div class="col-md-10 ml-auto mr-auto">
-                    <h2 class="title">Latest Blogposts</h2>
-                    <br>
+              <div class="col-md-5">
+                <div class="card-header card-header-image">
+                  <a href="{% url 'blog:detail' pk=object.pk %}">
+                    <img class="img" src="{{object.image.url}}">
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-7">
+                <h3 class="card-title">
+                  <a href="{% url 'blog:detail' pk=object.pk %}">{{ object.title }}</a>
+                </h3>
+                <p class="card-description">
+                  {{ object.body|truncatewords:50 }}
+                  <a href="{% url 'blog:detail' pk=object.pk %}"> Read More </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
 
-                    {% for object in object_list %}
-                    <div class="card card-plain card-blog">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <div class="card-header card-header-image">
-                                    <a href="#pablito">
-                                        <img class="img" src="{{object.image.url}}">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-7">
-                                <h3 class="card-title">
-                                    <a href="#pablo">{{ object.title }}</a>
-                                </h3>
-                                <p class="card-description">
-                                    {{ object.body|truncatewords:50 }}
-                                    <a href="#pablo"> Read More </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-
-                    <!-- <div class="card card-plain card-blog">
+          <div class="card card-plain card-blog">
               <div class="row">
                 <div class="col-md-7">
                   <h6 class="card-category text-danger">
@@ -65,15 +63,45 @@
                 <div class="col-md-5">
                   <div class="card-header card-header-image">
                     <img class="img img-raised" src="./assets/img/office2.jpg">
-                  </div> -->
-                    <!-- </div>
+                  </div>
+          </div>
               </div>
-            </div> -->
-                </div>
             </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
+</div>-->
 
+  <div class="container"><br><br>
+    <div class="row">
+
+      <div class="col-md-12">
+        <h2 class="title text-center">Blog Posts</h2>
+        <div class="row">
+          {% for object in object_list reversed %}
+          <div class="col-md-4">
+            <div class="card card-blog">
+              <div class="card-header card-header-image">
+                <a href="{% url 'blog:detail' pk=object.pk %}">
+                  <img class="img img-raised" src="{{object.image.url}}">
+                </a>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="{% url 'blog:detail' pk=object.pk %}">{{ object.title }}</a>
+                </h4>
+                <p class="card-description">{{ object.body|truncatewords:30 }}<a href="{% url 'blog:detail' pk=object.pk %}"> Read More </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock content %}
