--- a/portfolio/templates/post/base.html
+++ b/portfolio/templates/post/base.html
@@ -1,45 +1,38 @@
 {% load staticfiles%}
+{% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'bootstrap/js/bootstrap.js' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/lightbox.min.css' %}">
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <!-- CSS Files -->
-    <link href="{% static 'assets/css/material-kit.css' %}" rel="stylesheet" />
-    {% block title %}
-    <title>Base Template</title>
-    {% endblock title %}
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+  <link rel="stylesheet" href="{% static 'bootstrap/js/bootstrap.js' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/lightbox.min.css' %}">
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+  <!-- CSS Files -->
+  <link href="{% static 'assets/css/material-kit.css' %}" rel="stylesheet" />
+  {% block title %}
+  <title>Base Template</title>
+  {% endblock title %}
+
 </head>
 
-<body style="background-color:darkslategray">
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="{% url 'gallery:gallery' %}">Gallery <span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="{% url 'contact:contact' %}">Contact</a>
-                <a class="nav-item nav-link active" href="{% url 'blog:blog' %}">Blogs</a>
-            </div>
-        </div>
-    </nav> -->
-    <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
+<style>
+  @font-face{
+    src: url("{% static 'assets/fonts/Photograph Signature.ttf ' %}") ;
+    font-family: Signature;
+  }
+</style>
+
+<body>
+  <!-- <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
             <div class="container">
               <div class="navbar-translate">
                 <a class="navbar-brand" href="{% url 'post:index' %}">
@@ -57,140 +50,157 @@
                     <a href="{% url 'gallery:gallery' %}" class="nav-link" data-toggle="">
                       <i class="material-icons">photo_camera</i> Gallery
                     </a>
-                    <!-- <div class="dropdown-menu dropdown-with-icons">
-                      <a href="./presentation.html" class="dropdown-item">
-                        <i class="material-icons">line_style</i> Presentation
-                      </a>
-                      <a href="./index.html" class="dropdown-item">
-                        <i class="material-icons">layers</i> All Components
-                      </a>
-                      <a href="http://demos.creative-tim.com/material-kit-pro/docs/2.1/getting-started/introduction.html" class="dropdown-item">
-                        <i class="material-icons">content_paste</i> Documentation
-                      </a>
-                    </div> -->
                   </li>
                   <li class="nav-item">
                     <a href="{% url 'blog:blog' %}" class="nav-link" data-toggle="">
                       <i class="material-icons">view_day</i> Blog
                     </a>
-                    <!-- <div class="dropdown-menu dropdown-with-icons">
-                      <a href="./sections.html#headers" class="dropdown-item">
-                        <i class="material-icons">dns</i> Headers
-                      </a>
-                      <a href="./sections.html#features" class="dropdown-item">
-                        <i class="material-icons">build</i> Features
-                      </a>
-                      <a href="./sections.html#blogs" class="dropdown-item">
-                        <i class="material-icons">list</i> Blogs
-                      </a>
-                      <a href="./sections.html#teams" class="dropdown-item">
-                        <i class="material-icons">people</i> Teams
-                      </a>
-                      <a href="./sections.html#projects" class="dropdown-item">
-                        <i class="material-icons">assignment</i> Projects
-                      </a>
-                      <a href="./sections.html#pricing" class="dropdown-item">
-                        <i class="material-icons">monetization_on</i> Pricing
-                      </a>
-                      <a href="./sections.html#testimonials" class="dropdown-item">
-                        <i class="material-icons">chat</i> Testimonials
-                      </a>
-                      <a href="./sections.html#contactus" class="dropdown-item">
-                        <i class="material-icons">call</i> Contacts
-                      </a>
-                    </div>-->
                   </li>
                   <li class="nav-item">
                     <a href="{% url 'contact:contact' %}" class="nav-link" data-toggle="">
                       <i class="material-icons">phone_iphone</i> Contact
                     </a>
-                    <!-- <div class="dropdown-menu dropdown-with-icons">
-                      <a href="./examples/about-us.html" class="dropdown-item">
-                        <i class="material-icons">account_balance</i> About Us
-                      </a>
-                      <a href="./examples/blog-post.html" class="dropdown-item">
-                        <i class="material-icons">art_track</i> Blog Post
-                      </a>
-                      <a href="./examples/blog-posts.html" class="dropdown-item">
-                        <i class="material-icons">view_quilt</i> Blog Posts
-                      </a>
-                      <a href="./examples/contact-us.html" class="dropdown-item">
-                        <i class="material-icons">location_on</i> Contact Us
-                      </a>
-                      <a href="./examples/landing-page.html" class="dropdown-item">
-                        <i class="material-icons">view_day</i> Landing Page
-                      </a>
-                      <a href="./examples/login-page.html" class="dropdown-item">
-                        <i class="material-icons">fingerprint</i> Login Page
-                      </a>
-                      <a href="./examples/pricing.html" class="dropdown-item">
-                        <i class="material-icons">attach_money</i> Pricing Page
-                      </a>
-                      <a href="./examples/shopping-cart.html" class="dropdown-item">
-                        <i class="material-icons">shopping_basket</i> Shopping Cart
-                      </a>
-                      <a href="./examples/ecommerce.html" class="dropdown-item">
-                        <i class="material-icons">store</i> Ecommerce Page
-                      </a>
-                      <a href="./examples/product-page.html" class="dropdown-item">
-                        <i class="material-icons">shopping_cart</i> Product Page
-                      </a>
-                      <a href="./examples/profile-page.html" class="dropdown-item">
-                        <i class="material-icons">account_circle</i> Profile Page
-                      </a>
-                      <a href="./examples/signup-page.html" class="dropdown-item">
-                        <i class="material-icons">person_add</i> Signup Page
-                      </a>
-                    </div> -->
                   </li>
-                  <!-- <li class="button-container nav-item iframe-extern">
-                    <a href="https://www.creative-tim.com/product/material-kit-pro?ref=presentation" target="_blank" class="btn  btn-rose   btn-round btn-block">
-                      <i class="material-icons">shopping_cart</i> Buy Now
-                    </a>
-                  </li> -->
                 </ul>
               </div>
             </div>
-          </nav>
+          </nav> -->
 
-    {% block content %}
 
-    {% endblock %}
+  <nav class="navbar navbar-inverse bg-dark fixed-top navbar-expand-lg" color-on-scroll="10" id="sectionsNav">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-translate">
+        <a style="font-family: Signature; font-size: 25px" class="navbar-brand" href="{% url 'post:index' %}">Aryaman Arya</a>
+        <button type="button" class="ml-auto navbar-toggler" data-toggle="collapse" data-target="#navigation-example2">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navigation-example2">
+        <ul class="navbar-nav navbar-center ml-auto">
+          <li class="nav-item">
+            <a href="{% url 'post:index' %}" class="nav-link">
+              Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'gallery:gallery' %}" class="nav-link">
+              Gallery
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'blog:blog' %}" class="nav-link">
+              Blog
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'contact:contact' %}" class="nav-link">
+              Contact Me
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="https://twitter.com/AryamanArya" class="nav-link">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.facebook.com/aryamanarya" class="nav-link">
+              <i class="fa fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.instagram.com/aryaman_photography/" class="nav-link">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <!--   Core JS Files   -->
-    <script src="{% static 'assets/js/lightbox-plus-jquery.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/js/core/jquery.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/js/core/bootstrap-material-design.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/js/plugins/moment.min.js' %}"></script>
-    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script src="{% static 'assets/js/plugins/bootstrap-datetimepicker.js' %}" type="text/javascript"></script>
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="{% static 'assets/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
-    <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-    <script src="{% static 'assets/js/plugins/bootstrap-tagsinput.js' %}"></script>
-    <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-    <script src="{% static 'assets/js/plugins/bootstrap-selectpicker.js' %}" type="text/javascript"></script>
-    <!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-    <script src="{% static 'assets/js/plugins/jasny-bootstrap.min.js' %}" type="text/javascript"></script>
-    <!--	Plugin for Small Gallery in Product Page -->
-    <script src="{% static 'assets/js/plugins/jquery.flexisel.js' %}" type="text/javascript"></script>
-    <!-- Plugins for presentation and navigation  -->
-    <script src="{% static 'assets/demo/modernizr.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/demo/vertical-nav.js' %}" type="text/javascript"></script>
-    <!-- Js With initialisations For Demo Purpose, Don't Include it in Your Project -->
-    <script src="{% static 'assets/demo/demo.js' %}" type="text/javascript"></script>
-    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-    <script src="{% static 'assets/js/material-kit.js' %}" type="text/javascript"></script>
-    <script>
-        $(document).ready(function () {
-            //init DateTimePickers
-            materialKit.initFormExtendedDatetimepickers();
+  {% block content %}
 
-            // Sliders Init
-            materialKit.initSliders();
-        });
-    </script>
+  {% endblock %}
+
+
+          <!--     *********    SIMPLE BLACK SOCIAL LINE     *********      -->
+          <div style="background-color:#212121;" class="social-line social-line-big-icons social-line-black">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-facebook-square"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-google-plus"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-dribbble"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-youtube-play"></i>
+                    </a>
+                  </div>
+                  <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--     *********   SIMPLE BLACK SOCIAL LINE     *********      -->
+
+  <!--   Core JS Files   -->
+  <script src="{% static 'assets/js/lightbox-plus-jquery.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/core/jquery.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/core/bootstrap-material-design.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/plugins/moment.min.js' %}"></script>
+  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+  <script src="{% static 'assets/js/plugins/bootstrap-datetimepicker.js' %}" type="text/javascript"></script>
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <script src="{% static 'assets/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
+  <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
+  <script src="{% static 'assets/js/plugins/bootstrap-tagsinput.js' %}"></script>
+  <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
+  <script src="{% static 'assets/js/plugins/bootstrap-selectpicker.js' %}" type="text/javascript"></script>
+  <!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
+  <script src="{% static 'assets/js/plugins/jasny-bootstrap.min.js' %}" type="text/javascript"></script>
+  <!--	Plugin for Small Gallery in Product Page -->
+  <script src="{% static 'assets/js/plugins/jquery.flexisel.js' %}" type="text/javascript"></script>
+  <!-- Plugins for presentation and navigation  -->
+  <script src="{% static 'assets/demo/modernizr.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/demo/vertical-nav.js' %}" type="text/javascript"></script>
+  <!-- Js With initialisations For Demo Purpose, Don't Include it in Your Project -->
+  <script src="{% static 'assets/demo/demo.js' %}" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="{% static 'assets/js/material-kit.js' %}" type="text/javascript"></script>
+  <script>
+    $(document).ready(function () {
+      //init DateTimePickers
+      materialKit.initFormExtendedDatetimepickers();
+
+      // Sliders Init
+      materialKit.initSliders();
+    });
+  </script>
 </body>
 
 </html>
