--- a/portfolio/templates/gallery/gallery.html
+++ b/portfolio/templates/gallery/gallery.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             
-            {% for image in gallery %}
+            {% for image in gallery reversed %}
             <div class="col-md-3">
                     <div class="card card-plain">
                         <a href="{{image.image.url}}" data-lightbox="mygallery" data-title="{{image.image_des}}">
