--- a/portfolio/templates/post/base.html
+++ b/portfolio/templates/post/base.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="{% static 'assets/images/photo-camera.png' %}" type="image/x-icon">
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'bootstrap/js/bootstrap.js' %}">
   <link rel="stylesheet" href="{% static 'assets/css/lightbox.min.css' %}">
@@ -32,40 +33,6 @@
 </style>
 
 <body>
-  <!-- <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
-            <div class="container">
-              <div class="navbar-translate">
-                <a class="navbar-brand" href="{% url 'post:index' %}">
-                 Aryaman Arya Photography </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="navbar-toggler-icon"></span>
-                  <span class="navbar-toggler-icon"></span>
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              </div>
-              <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a href="{% url 'gallery:gallery' %}" class="nav-link" data-toggle="">
-                      <i class="material-icons">photo_camera</i> Gallery
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'blog:blog' %}" class="nav-link" data-toggle="">
-                      <i class="material-icons">view_day</i> Blog
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'contact:contact' %}" class="nav-link" data-toggle="">
-                      <i class="material-icons">phone_iphone</i> Contact
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav> -->
-
 
   <nav class="navbar navbar-inverse bg-dark fixed-top navbar-expand-lg" color-on-scroll="10" id="sectionsNav">
     <div class="container">
@@ -129,7 +96,7 @@
 
 
           <!--     *********    SIMPLE BLACK SOCIAL LINE     *********      -->
-          <div style="background-color:#212121;" class="social-line social-line-big-icons social-line-black">
+          <!-- <div style="background-color:#212121;" class="social-line social-line-big-icons social-line-black">
               <div class="container">
                 <div class="row">
                   <div class="col-md-2 col-4">
@@ -164,7 +131,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!--     *********   SIMPLE BLACK SOCIAL LINE     *********      -->
 
   <!--   Core JS Files   -->
