--- a/portfolio/templates/post/index.html
+++ b/portfolio/templates/post/index.html
@@ -114,4 +114,15 @@
   {% endfor %}
 </body>
 
+<!-- <script type="text/javascript">
+    $(document).ready(function(){
+      $('body').bind('cut copy paste', function(e){
+        e.preventDefault();
+      })
+      $("body").on("context_menu", function(e){
+        return false;
+      })
+    })
+</script> -->
+
 {% endblock %}
