--- a/portfolio/templates/contact/contact.html
+++ b/portfolio/templates/contact/contact.html
@@ -12,16 +12,19 @@
       <div class="row">
         <div class="col-md-5">
           <h2 class="title">Get in Touch</h2>
-          <h5 class="description">You need more information?</h5>
           <div class="info info-horizontal">
             <div class="icon icon-primary">
               <i class="material-icons">pin_drop</i>
             </div>
             <div class="description">
-              <h4 class="info-title">Find us at the office</h4>
-              <p> #191 Holy City,
+              
+              {% for i in info %}
+                
+              <h4 class="info-title">Find me at</h4>
+              <p>{{ i.address }}</p>
+              <!-- <p> #191 Holy City,
                 <br>Amritsar, Punjab,
-                <br> India
+                <br> India -->
               </p>
             </div>
           </div>
@@ -30,14 +33,16 @@
               <i class="material-icons">phone</i>
             </div>
             <div class="description">
-              <h4 class="info-title">Give us a ring</h4>
-              <p> Aryaman Arya
+              <h4 class="info-title">Give me a ring</h4>
+              <p>{{i.phone}}</p>
+              <!-- <p> Aryaman Arya
                 <br> +918872460311
-                <br> Mon - Fri, 8:00-22:00
+                <br> Mon - Fri, 8:00-22:00 -->
               </p>
             </div>
           </div>
         </div>
+        {% endfor %}
         <div class="col-md-5 ml-auto">
           <div class="card card-contact">
             <form id="contact-form" method="post">
